corrigido paleta de cores

--- a/CSS/experiencia.css
+++ b/CSS/experiencia.css
@@ -16,7 +16,7 @@
   line-height: 1.33;
   max-width: 40ch;
   margin-bottom: 60px;
-  color: #525252;
+  color:#202020;
 }
 
 .experiencia-texto strong {
@@ -79,7 +79,7 @@
   font-size: 0.875rem;
   line-height: 1.4;
   border-radius: 4px;
-  background: #ffffff;
+  background: #ffff;
   padding: 5px 10px;
 }
 
