--- a/CSS/tema.css
+++ b/CSS/tema.css
@@ -1,11 +1,10 @@
 /* Tema escuro */
 .dark-mode {
-  background-color: darkolivegreen;
-  color: #141414;
-  transition: 1s;
+  background-color:darkslategrey;
+  color: black;
+  font-weight: bolder;
 }
 
 .dark-mode a {
   color: #f5f5f5;
-  transition: 2s;
 }
